# nim-game-ai

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
src/game/: mod.rs  players.rs  start.rs  ui.rs
